@@ -2,6 +2,9 @@
 Changes with Apache 2.3.0
   [Remove entries to the current 2.0 and 2.2 section below, when backported]
 
+  *) Respect GracefulShutdownTimeout in the worker and event MPMs.
+     [Chris Darroch <chrisd pearsoncmg.com>, Garrett Rooney]
+
   *) mod_proxy_balancer: Do not overwrite the status of initialized workers and
      respect the configured status of uninitilized workers when creating a new
      child process. [Ruediger Pluem]
